Added og:image tag

--- a/immobilier.html
+++ b/immobilier.html
@@ -8,6 +8,7 @@ Hello i'm Phil Boivin!
   <meta charset="utf-8">
   <title>Immobilier | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property=”og:image” content=”https://www.philboivin.com/img/og/philboivin.jpg” />
   <link rel="icon" type="image/png" href="img/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.2/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
