--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ Hello i'm Phil Boivin!
   <meta charset="utf-8">
   <title>Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property=”og:image” content=”https://www.philboivin.com/img/og/philboivin.jpg” />
   <link rel="icon" type="image/png" href="img/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="/css/style.css" rel="stylesheet" type="text/css">
@@ -34,7 +35,9 @@ Hello i'm Phil Boivin!
         <h1>Bienvenue</h1>
         
         <p>
-        Je suis Philippe, un photographe montréalais au service des humains et de certains robots.<br>
+        Je suis Philippe, un photographe montréalais au service des humains et de certains robots.
+        </p>
+        <p>
         Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> ou ma page <a href="/apropos.html">à propos</a>. Vous pouvez même me <a href="/contact.html">contacter</a>.
         </p>
 
