--- a/apropos.html
+++ b/apropos.html
@@ -8,7 +8,7 @@ Hello i'm Phil Boivin!
   <meta charset="utf-8">
   <title>À propos | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://www.philboivin.com/img/og/philboivin.jpg" />
+  <meta property="og:image" content="https://www.philboivin.com/img/og/philboivin-og.jpg" />
   <link rel="icon" type="image/png" href="img/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="/css/style.css" rel="stylesheet" type="text/css">
