--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@ Hello i'm Phil Boivin!
     </nav>
 
     <div class="row">
-      <div class="col">
+      <div class="col intro">
 
-        <h1>Bienvenue</h1>
+        <h1>Bonjour!</h1>
         
         <p>
-        Je suis Philippe, un photographe montréalais au service des humains et de certains robots.
+        Je suis Philippe.
+        <br>
+        Un photographe montréalais au service des humains (et de certains robots).
+        <br>
+        Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
         </p>
-        <p>
-        Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> ou ma page <a href="/apropos.html">à propos</a>. Vous pouvez même me <a href="/contact.html">contacter</a>.
-        </p>
+
 
       </div>
     </div>
