Increase font size for p

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Hello i'm Phil Boivin!
     </nav>
 
     <div class="row">
-      <div class="col intro">
+      <div class="col">
 
         <h1>Bonjour!</h1>
         
@@ -41,7 +41,6 @@ Hello i'm Phil Boivin!
         <br>
         Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
         </p>
-
 
       </div>
     </div>
