Color change for links and footer

--- a/editorial.html
+++ b/editorial.html
@@ -68,6 +68,7 @@ Hello i'm Phil Boivin!
 
                 // LIGHTBOX
                 viewerToolbar: { display: false },
+                viewerBackground: { color: #333 },
                 viewerTools: {
                   topLeft:   'label',
                   topRight:  'shareButton, zoomButton, fullscreenButton, closeButton'
