--- a/inc/menu-portfolio.html
+++ b/inc/menu-portfolio.html
@@ -1,5 +1,6 @@
-<h2>Autres photos et projets</h2>
+<h2>Sections</h2>
 <ul class="sub-menu">
+	<li><a href="/portfolio.html">Portfolio</a></li>
 	<li><a href="/editorial.html">Editorial</a></li>
 	<li><a href="/reportages.html">Reportages</a></li>
 	<li><a href="/evenements.html">Événements</a></li>
