--- a/portfolio.html
+++ b/portfolio.html
@@ -138,8 +138,10 @@ Hello i'm Phil Boivin!
               { src: 'travel/900px/20150705-travel-philboivin-012.jpg', srct: 'travel/400px/20150705-travel-philboivin-012.jpg', 
                   title: 'Nara - 2015' },
 
-              { src: 'portraits/900px/20161112-portraits-philboivin-009.jpg', srct: 'portraits/400px/20161112-portraits-philboivin-009.jpg', 
-                  title: 'Zoey' },
+
+              { src: 'ads/900px/20181126-ads-philboivin-007.jpg', srct: 'ads/400px/20181126-ads-philboivin-007.jpg', 
+                  title: 'Cegep Gerald-Godin' },
+                  
 
               { src: 'travel/900px/20150701-travel-philboivin-011.jpg', srct: 'travel/400px/20150701-travel-philboivin-011.jpg', 
                   title: 'Kyoto - 2015' },
