--- a/apropos.html
+++ b/apropos.html
@@ -41,7 +41,7 @@ Hello i'm Phil Boivin!
         </p>
 
         <p>
-        Philippe est titulaire d’un diplôme en photographie de l’Université Concordia de Montréal.
+        Philippe est titulaire d’un diplôme en photographie de l’Université Concordia de Montréal et possède une certification avancée comme pilote de drone au Canada.
         </p>
 
       </div>
