New background video
On index page - webm

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ Hello i'm Phil Boivin!
 
 <body>
 
+<video autoplay muted id="indexVideo">
+  <source src="videos/philboivinbirds.webm" type="video/webm">
+</video>
+
   <main>
     <div id="content">
 
