--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Hello i'm Phil Boivin!
 <body>
 
 <video autoplay muted id="indexVideo">
-  <source src="videos/philboivinbirds-3.mp4" type="video/mp4">
+  <source src="videos/philboivinbirds.webm" type="video/webm">
 </video>
 
   <main>
