--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@ Hello i'm Phil Boivin!
             }
 
             $.get('https://api.ipify.org', function(data) {
-              var ip = data;
+              ip = data;
             })
 
             var finalMsg = $("#message-input").val() + '\r' + ip;
