--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@ Hello i'm Phil Boivin!
      
         var x = "<span class='redCircle'>x</span>&nbsp;&nbsp;";
         var nameRegex = /[A-Za-z]{1}[A-Za-z]/;
-        var ip,
+        var ip;
 
             if ($("#email").val() || $("#name").val()) {
               return;
