--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,7 @@ Hello i'm Phil Boivin!
      
         var x = "<span class='redCircle'>x</span>&nbsp;&nbsp;";
         var nameRegex = /[A-Za-z]{1}[A-Za-z]/;
-        var ip;
-
+        
             if ($("#email").val() || $("#name").val()) {
               return;
             }
@@ -110,10 +109,10 @@ Hello i'm Phil Boivin!
             }
 
             $.get('https://api.ipify.org', function(data) {
-              ip = data;
+              globalThis.ip = data;
             })
 
-            var finalMsg = $("#message-input").val() + '\r' + ip;
+            var finalMsg = $("#message-input").val() + ' ' + ip;
 
  
        var data = {
