--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@ var ip;
             }
 
 
-       var finalMsg = 'From IP '+ ip + ' - ' + $("#message-input").val();
+       var finalMsg = 'IP: '+ ip + ' - ' + $("#message-input").val();
 
        var data = {
           name: $("#name-input").val(),
