--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ Hello i'm Phil Boivin!
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
   <link rel="icon" type="image/png" href="img/icon.png">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="/css/style.css" rel="stylesheet" type="text/css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -23,31 +23,48 @@ Hello i'm Phil Boivin!
   <main>
     <div id="content">
 
-    <nav id="main-menu">
-      <div id="menuToggle">
-        <input type="checkbox" />
-        <span></span>
-        <span></span>
-        <span></span> 
-        <ul id="menu-items"></ul>
+      <nav id="main-menu">
+        <div id="menuToggle">
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span> 
+          <ul id="menu-items"></ul>
+        </div>
+      </nav>
+
+      <div class="row">
+        <div class="col">
+
+          <h1>Bonjour!</h1> 
+          <p>
+          Je suis Philippe.
+          <br>
+          Un photographe montréalais au service des humains (et de certains robots).
+          <br>
+          Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
+          </p>
+
+        </div>
       </div>
-    </nav>
 
-    <div class="row">
-      <div class="col">
+      <div class="row">
+        <div class="col">
+          <span id="menu-galeries">
+            
+            <h2>Galeries</h2>
+            <ul class="sub-menu">
+              <li><a href="/portfolio.html">Portfolio</a></li>
+              <li><a href="/editorial.html">Editorial</a></li>
+              <li><a href="/evenements.html">Événements</a></li>
+              <li><a href="/portraits.html">Portraits</a></li>
+              <li><a href="/video.html">Vidéo</a></li>
+              <li><a href="/portfolio.html#menu-galeries">Autres</a></li>
+            </ul>
 
-        <h1>Bonjour!</h1>
-        
-        <p>
-        Je suis Philippe.
-        <br>
-        Un photographe montréalais au service des humains (et de certains robots).
-        <br>
-        Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
-        </p>
-
+          </span>
+        </div>
       </div>
-    </div>
 
     </div>
   </main>
