--- a/blogue.html
+++ b/blogue.html
@@ -6,7 +6,7 @@ Hello i'm Phil Boivin!
 
 <head>
   <meta charset="utf-8">
-  <title>Vidéo | Philippe Boivin</title>
+  <title>Blogue | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
   <link rel="icon" type="image/png" href="img/icon.png">
@@ -24,39 +24,35 @@ Hello i'm Phil Boivin!
           <input type="checkbox" />
           <span></span>
           <span></span>
-          <span></span>
+          <span></span> 
           <ul id="menu-items"></ul>
         </div>
       </nav>
 
-    <div class="row">
-      <div class="col">
+      <div class="row">
+        <div class="col">
 
-        <h1>Vidéo</h1>
+          <h1>Blogue</h1>
+          
+          <p>
+          Articles et autres histoires.
+          </p>
 
-        <p>
-         <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/389216283" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-        </p>
+          <span id="menu-blogue"></span>
 
+        </div>
       </div>
-    </div>
 
-    <div class="row top-spacer">
-      <div class="col">
-        <span id="menu-galeries"></span>
-      </div>
     </div>
-
-  </div> 
-</main>
+  </main>
   
 <footer></footer>
 
 <!-- Load shared HTML content -->
 <script> 
   $(function(){
-    $("#menu-items").load("/inc/menu.html"); 
-    $("#menu-galeries").load("/inc/menu-galeries.html");
+    $("#menu-items").load("/inc/menu.html");
+    $("#menu-blogue").load("/inc/menu-blogue.html");
     $("footer").load("/inc/footer.html");
   });
 </script> 
