--- a/editorial.html
+++ b/editorial.html
@@ -10,9 +10,9 @@ Hello i'm Phil Boivin!
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
   <link rel="icon" type="image/png" href="img/icon.png">
+  <link href="/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.2/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
-  <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 
@@ -42,7 +42,13 @@ Hello i'm Phil Boivin!
 
       <div class="row top-spacer">
         <div class="col">
-          <span id="menu-portfolio"></span>
+          <span id="menu-editorial"></span>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <span id="menu-galeries"></span>
         </div>
       </div>
   
@@ -51,25 +57,26 @@ Hello i'm Phil Boivin!
 
 <footer></footer>
 
+<!-- Load shared HTML content -->
 <script> 
   $(function(){
     $("#menu-items").load("/inc/menu.html"); 
-    $("#menu-portfolio").load("/inc/menu-portfolio.html");
+    $("#menu-editorial").load("/inc/menu-editorial.html");
+    $("#menu-galeries").load("/inc/menu-galeries.html");
     $("footer").load("/inc/footer.html");
   });
 </script> 
 
 
-<!-- 
-Photo gallery integration
--->
+<!-- Load the gallery integration -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.2/jquery.nanogallery2.min.js"></script>
 <script src="js/pb.lib.js"></script>
 
 <script>
-var csv = 'csv/phil-boivin-editorial.csv';
-var gallery = "#gallery";
-displayGallery(csv, gallery);
+ // var csv = 'csv/phil-boivin-editorial.csv';
+ var csv = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTntSEyC_ayVeSc8uebcvVfCFd9EkHJ4VK5gTpoR6iNmwsGRWgDcBF59bRIbBPqVfESxngkC7F8krBM/pub?gid=0&single=true&output=csv';
+  var gallery = "#gallery";
+  displayGallery(csv, gallery);
 </script>
 
 
