--- a/inc/menu-galeries.html
+++ b/inc/menu-galeries.html
@@ -1,15 +1,11 @@
-<h2>Sections</h2>
+<h2>Galeries</h2>
 <ul class="sub-menu">
 	<li><a href="/portfolio.html">Portfolio</a></li>
 	<li><a href="/editorial.html">Editorial</a></li>
 	<li><a href="/reportages.html">Reportages</a></li>
 	<li><a href="/evenements.html">Événements</a></li>
-	<li><a href="/portraits.html">Portrait</a></li>
+	<li><a href="/portraits.html">Portraits</a></li>
 	<li><a href="/immobilier.html">Immobilier</a></li>
 	<li><a href="/publicites.html">Publicités</a></li>
-	<li><a href="/taxi.html">Taxi</a></li>
-	<li><a href="/cirque-du-soleil.html">Cirque&nbsp;du&nbsp;Soleil</a></li>
-	<li><a href="/mobile.html">Mobile</a></li>
-	<li><a href="/flashback.html">Flashback</a></li>
 	<li><a href="/video.html">Video</a></li>
 </ul>
