CSV link update
Was linking to google doc, now it's a local csv.

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,8 +132,7 @@ Hello i'm Phil Boivin!
 <script src="js/pb.lib.js"></script>
 
 <script>
- // var csv = 'csv/phil-boivin-portfolio.csv';
-  var csv = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTntSEyC_ayVeSc8uebcvVfCFd9EkHJ4VK5gTpoR6iNmwsGRWgDcBF59bRIbBPqVfESxngkC7F8krBM/pub?gid=1579305447&single=true&output=csv';
+  var csv = 'csv/phil-boivin-portfolio.csv';
   var gallery = "#gallery";
   displayGallery(csv, gallery);
 </script>
