--- a/reportages.html
+++ b/reportages.html
@@ -65,8 +65,7 @@ Hello i'm Phil Boivin!
 <script src="js/pb.lib.js"></script>
 
 <script>
- // var csv = 'csv/phil-boivin-reportages.csv';
-  var csv = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTntSEyC_ayVeSc8uebcvVfCFd9EkHJ4VK5gTpoR6iNmwsGRWgDcBF59bRIbBPqVfESxngkC7F8krBM/pub?gid=738498607&single=true&output=csv';
+  var csv = 'csv/phil-boivin-reportages.csv';
   var gallery = "#gallery";
   displayGallery(csv, gallery);
 </script>
