--- a/editorial.html
+++ b/editorial.html
@@ -73,8 +73,7 @@ Hello i'm Phil Boivin!
 <script src="js/pb.lib.js"></script>
 
 <script>
- // var csv = 'csv/phil-boivin-editorial.csv';
- var csv = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTntSEyC_ayVeSc8uebcvVfCFd9EkHJ4VK5gTpoR6iNmwsGRWgDcBF59bRIbBPqVfESxngkC7F8krBM/pub?gid=0&single=true&output=csv';
+  var csv = 'csv/phil-boivin-editorial.csv';
   var gallery = "#gallery";
   displayGallery(csv, gallery);
 </script>
