Major update to navigation
- Added the galeries in the main menu and footer
- Removed the galeries links from the pages
- CSS updates

--- a/inc/footer.html
+++ b/inc/footer.html
@@ -2,16 +2,16 @@
 <section id="menu">
    
 
-   <div class="logo"><a href="/index.html">Philippe Boivin</a></div>
+   <div class="logo">Philippe Boivin</div>
 
 
    	<nav>
 
-   		<ul id="footer-menu-items"></ul>
+      <ul id="footer-menu-items"></ul>
 
 		  <script> 
 			  $(function(){
-			    $("#footer-menu-items").load("/inc/menu.html"); 		    
+			    $("#footer-menu-items").load("/inc/menu.html"); 
 			  });
 			</script> 
 			
