--- a/inc/menu.html
+++ b/inc/menu.html
@@ -1,3 +1,19 @@
-<li><a href="/portfolio.html">Portfolio</a></li>
-<li><a href="/apropos.html">À propos</a></li>
-<li><a href="/contact.html">Contact</a></li>
+<li>
+	<ul>
+		<li><a href="/index.html">Accueil</a></li>
+		<li><a href="/apropos.html">À propos</a></li>
+		<li><a href="/contact.html">Contact</a></li>
+	</ul>
+</li>
+<li>
+	<ul>
+		<li><a href="/portfolio.html">Portfolio</a></li>
+		<li><a href="/editorial.html">Editorial</a></li>
+		<li><a href="/reportages.html">Reportages</a></li>
+		<li><a href="/evenements.html">Événements</a></li>
+		<li><a href="/portraits.html">Portraits</a></li>
+		<li><a href="/immobilier.html">Immobilier</a></li>
+		<li><a href="/publicites.html">Publicités</a></li>
+		<li><a href="/videos.html">Vidéos</a></li>
+	</ul>
+</li>
