--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Hello i'm Phil Boivin!
           <input type="checkbox" />
           <span></span>
           <span></span>
-          <span></span> 
+          <span></span>
           <ul id="menu-items"></ul>
         </div>
       </nav>
@@ -52,7 +52,7 @@ Hello i'm Phil Boivin!
         <div class="col">
           <span id="menu-galeries">
             
-            <h2>Galeries</h2>
+           <!--  <h2>Galeries</h2>
             <ul class="sub-menu">
               <li><a href="/portfolio.html">Portfolio</a></li>
               <li><a href="/editorial.html">Editorial</a></li>
@@ -60,7 +60,7 @@ Hello i'm Phil Boivin!
               <li><a href="/portraits.html">Portraits</a></li>
               <li><a href="/video.html">Vidéo</a></li>
               <li><a href="/portfolio.html#menu-galeries">Autres</a></li>
-            </ul>
+            </ul> -->
 
           </span>
         </div>
@@ -73,7 +73,7 @@ Hello i'm Phil Boivin!
 
 <script> 
   $(function(){
-    $("#menu-items").load("/inc/menu.html"); 
+    $("#menu-items").load("/inc/menu.html");
     $("footer").load("/inc/footer.html");
   });
 </script> 
