--- a/videos.html
+++ b/videos.html
@@ -6,7 +6,7 @@ Hello i'm Phil Boivin!
 
 <head>
   <meta charset="utf-8">
-  <title>Vidéo | Philippe Boivin</title>
+  <title>Vidéos | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
   <link rel="icon" type="image/png" href="img/icon.png">
@@ -32,7 +32,7 @@ Hello i'm Phil Boivin!
     <div class="row">
       <div class="col">
 
-        <h1>Vidéo</h1>
+        <h1>Vidéos</h1>
 
         <p>
          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/389216283" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
@@ -41,11 +41,6 @@ Hello i'm Phil Boivin!
       </div>
     </div>
 
-    <div class="row top-spacer">
-      <div class="col">
-        <span id="menu-galeries"></span>
-      </div>
-    </div>
 
   </div> 
 </main>
@@ -56,7 +51,6 @@ Hello i'm Phil Boivin!
 <script> 
   $(function(){
     $("#menu-items").load("/inc/menu.html"); 
-    $("#menu-galeries").load("/inc/menu-galeries.html");
     $("footer").load("/inc/footer.html");
   });
 </script> 
