--- a/index.html
+++ b/index.html
@@ -40,29 +40,11 @@ Hello i'm Phil Boivin!
           <p>
           Je suis Philippe.
           <br>
-          Un photographe montréalais au service des humains (et de certains robots).
+          Un photographe et pilote de drone montréalais au service des humains (et de certains robots).
           <br>
           Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
           </p>
 
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <span id="menu-galeries">
-            
-           <!--  <h2>Galeries</h2>
-            <ul class="sub-menu">
-              <li><a href="/portfolio.html">Portfolio</a></li>
-              <li><a href="/editorial.html">Editorial</a></li>
-              <li><a href="/evenements.html">Événements</a></li>
-              <li><a href="/portraits.html">Portraits</a></li>
-              <li><a href="/video.html">Vidéo</a></li>
-              <li><a href="/portfolio.html#menu-galeries">Autres</a></li>
-            </ul> -->
-
-          </span>
         </div>
       </div>
 
