--- a/inc/footer.html
+++ b/inc/footer.html
@@ -4,11 +4,11 @@
 
    	<nav>
 
-      <ul id="footer-menu-items"></ul>
-
+      <div id="footer-menu-l1"></div>
+     
 		  <script> 
 			  $(function(){
-			    $("#footer-menu-items").load("/inc/menu.html"); 
+			    $("#footer-menu-l1").load("/inc/menu-l1.html"); 
 			  });
 			</script> 
 			
