--- a/inc/menu-editorial.html
+++ b/inc/menu-editorial.html
@@ -1,8 +1,11 @@
-<h2>Projets éditoriaux</h2>
+<!-- <h2>Projets éditoriaux</h2>
 <ul class="sub-menu">
 	<li><a href="/les-visages-du-taxi.html">Les visages du taxi</a></li>
 	<li><a href="/cirque-du-soleil.html">Lumière sur... le Cirque du Soleil</a></li>
 	<li><a href="/flashback.html">Flashback</a></li>
 	<li><a href="/mobile.html">Mobile</a></li>
-</ul>
+</ul> -->
+<hr>
 
+<p>
+Autres projets éditoriaux : <span class="sub-sub-menu">[ <a href="/les-visages-du-taxi.html">Taxi</a> | <a href="/cirque-du-soleil.html">Cirque du Soleil</a> | <a href="/flashback.html">Flashback</a> | <a href="/mobile.html">Mobile</a> ]</span></p>
