--- a/cirque-du-soleil.html
+++ b/cirque-du-soleil.html
@@ -31,7 +31,7 @@ Hello i'm Phil Boivin!
 
       <div class="row">
         <div class="col">
-
+          <div id="menu-l2" class="sub-menu"></div>
           <h1>Lumière sur... le Cirque du Soleil</h1>
           <p>Les employés du Cirque du Soleil sont particuliers, spécialisés, révolutionnaires, artistiques, brillants, uniques, audacieux, talentueux, surprenants, innovateurs, humains, sensibles, accessibles et bien davantage. Bref, les employés du Cirque sont inspirants, excellent dans leur profession et font rayonner le Cirque et c'est-ce que cette série de rencontres mettra en lumière.
           En collaboration avec Élyse Gamache-Bélisle.
@@ -87,7 +87,7 @@ Hello i'm Phil Boivin!
       </div>
     </div>
 
-    <div class="row top-spacer">
+    <div class="row">
       <div class="col">
         <span id="menu-editorial"></span>
       </div>
@@ -101,7 +101,8 @@ Hello i'm Phil Boivin!
 <!-- Load shared HTML content -->
 <script> 
   $(function(){
-    $("#menu-items").load("/inc/menu.html"); 
+    $("#menu-items").load("/inc/menu.html");
+    $("#menu-l2").load("/inc/menu-l2.html");
     $("#menu-editorial").load("/inc/menu-editorial.html");
     $("footer").load("/inc/footer.html");
   });
