--- a/editorial.html
+++ b/editorial.html
@@ -33,18 +33,14 @@ Hello i'm Phil Boivin!
 
       <div class="row">
         <div class="col">
+          <div id="menu-l2" class="sub-menu"></div>
           <h1>Editorial</h1>
           <p>Quelques photos éditoriales et de presse concernant l’actualité.</p>
+          <div id="menu-editorial"></div>
         </div>
       </div>
 
       <div id="gallery">Chargement...</div>
-
-      <div class="row top-spacer">
-        <div class="col">
-          <span id="menu-editorial"></span>
-        </div>
-      </div>
   
    </div>
  </main>
@@ -54,7 +50,8 @@ Hello i'm Phil Boivin!
 <!-- Load shared HTML content -->
 <script> 
   $(function(){
-    $("#menu-items").load("/inc/menu.html"); 
+    $("#menu-items").load("/inc/menu.html");
+    $("#menu-l2").load("/inc/menu-l2.html");
     $("#menu-editorial").load("/inc/menu-editorial.html");
     $("footer").load("/inc/footer.html");
   });
