--- a/les-visages-du-taxi.html
+++ b/les-visages-du-taxi.html
@@ -31,7 +31,7 @@ Hello i'm Phil Boivin!
 
       <div class="row">
         <div class="col">
-
+          <div id="menu-l2" class="sub-menu"></div>
           <h1>Les visages du taxi</h1>
           <p>Les visages du taxi est un projet photo avec les travailleurs de l’industrie du taxi au Québec. L’objectif du projet est de révéler le visage, la réalité et l’histoire des chauffeurs de taxi dans un contexte de changement et de précarité.
           </p>
@@ -142,7 +142,7 @@ Hello i'm Phil Boivin!
     </div>
 
 
-    <div class="row top-spacer">
+    <div class="row">
       <div class="col">
         <span id="menu-editorial"></span>
       </div>
@@ -157,7 +157,8 @@ Hello i'm Phil Boivin!
 <!-- Load shared HTML content -->
 <script> 
   $(function(){
-    $("#menu-items").load("/inc/menu.html"); 
+    $("#menu-items").load("/inc/menu.html");
+    $("#menu-l2").load("/inc/menu-l2.html");
     $("#menu-editorial").load("/inc/menu-editorial.html");
     $("footer").load("/inc/footer.html");
   });
