--- a/mobile.html
+++ b/mobile.html
@@ -35,6 +35,7 @@ Hello i'm Phil Boivin!
       <div class="row">
         <div class="col">
 
+          <div id="menu-l2" class="sub-menu"></div>
           <h1>Mobile</h1>
           <p>Quelques photos capturées sur mobile.</p>
      
@@ -43,7 +44,7 @@ Hello i'm Phil Boivin!
 
       <div id="gallery"></div>
 
-      <div class="row top-spacer">
+      <div class="row">
         <div class="col">
           <span id="menu-editorial"></span>
         </div>
@@ -132,7 +133,8 @@ Hello i'm Phil Boivin!
 <!-- Load shared HTML content -->
 <script> 
   $(function(){
-    $("#menu-items").load("/inc/menu.html"); 
+    $("#menu-items").load("/inc/menu.html");
+    $("#menu-l2").load("/inc/menu-l2.html");
     $("#menu-editorial").load("/inc/menu-editorial.html");
     $("footer").load("/inc/footer.html");
   });
