--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,7 @@ Hello i'm Phil Boivin!
 
       <div class="row">
         <div class="col">
+          <div id="menu-l2" class="sub-menu"></div>
           <h1>Portfolio</h1>
         </div>
       </div>
@@ -113,7 +114,8 @@ Hello i'm Phil Boivin!
 <!-- Load shared HTML content -->
 <script> 
   $(function(){
-    $("#menu-items").load("/inc/menu.html"); 
+    $("#menu-items").load("/inc/menu.html");
+    $("#menu-l2").load("/inc/menu-l2.html");  
     $("footer").load("/inc/footer.html");
   });
 </script> 
