--- a/portraits.html
+++ b/portraits.html
@@ -35,8 +35,9 @@ Hello i'm Phil Boivin!
       <div class="row">
         <div class="col">
 
+          <div id="menu-l2" class="sub-menu"></div>
           <h1>Portraits</h1>
-     
+
         </div>
       </div>
 
@@ -141,7 +142,8 @@ Hello i'm Phil Boivin!
 <!-- Load shared HTML content -->
 <script> 
   $(function(){
-    $("#menu-items").load("/inc/menu.html"); 
+    $("#menu-items").load("/inc/menu.html");
+    $("#menu-l2").load("/inc/menu-l2.html");
     $("footer").load("/inc/footer.html");
   });
 </script> 
