Content + Nanogallery updates
- Added the new Blog section
- New blog content : MAB
- Updated CSS (Minor fixes)
- New real estate photo
- Updated Nanogallery2 to version 3.0.5

--- a/blogue.html
+++ b/blogue.html
@@ -35,7 +35,7 @@ Hello i'm Phil Boivin!
           <h1>Blogue</h1>
           
           <p>
-          Articles et autres histoires.
+          Articles, projets et autres histoires.
           </p>
 
           <span id="menu-blogue"></span>
