--- a/blogue/2020-12-05-surf-montreal.html
+++ b/blogue/2020-12-05-surf-montreal.html
@@ -6,7 +6,7 @@ Hello i'm Phil Boivin!
 
 <head>
   <meta charset="utf-8">
-  <title>Surfer en hiver à Montréakl | Philippe Boivin</title>
+  <title>Surfer en hiver à Montréal | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
   <link rel="icon" type="image/png" href="img/icon.png">
@@ -29,7 +29,7 @@ Hello i'm Phil Boivin!
         </div>
       </nav>
 
-      <div class="row">
+      <div class="row blog">
         <div class="col">
 
           <h1>Surfer en hiver à Montréal</h1>
@@ -37,7 +37,8 @@ Hello i'm Phil Boivin!
           <p>
            <div class="date-blog">5 décembre 2020</div>
 
-           Quelques photos capturées sur le fleuve Saint-Laurent près d’Habitat à Montréal. Malgré la température près du point de congélation, j'ai rencontré quelques surfeuses et surfeurs passionnés par les vagues.
+           Quelques photos capturées sur le fleuve Saint-Laurent près d’Habitat à Montréal.
+           <br>Malgré la température près du point de congélation, j'ai rencontré quelques surfeuses et surfeurs passionnés par les vagues.
           </p>
 
           <div class="photos">
