--- a/inc/menu.html
+++ b/inc/menu.html
@@ -1,4 +1,5 @@
 <li><a href="/index.html">Accueil</a></li>
 <li><a href="/apropos.html">À propos</a></li>
 <li><a href="/portfolio.html">Portfolio</a></li>
+<li><a href="/blogue.html">Blogue</a></li>
 <li><a href="/contact.html">Contact</a></li>
