--- a/immobilier.html
+++ b/immobilier.html
@@ -12,8 +12,7 @@ Hello i'm Phil Boivin!
   <link rel="icon" type="image/png" href="img/icon.png">
   <link href="/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.2/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.2/jquery.nanogallery2.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.5/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
 </head>
 
 
@@ -39,53 +38,7 @@ Hello i'm Phil Boivin!
         </div>
       </div>
 
-      <div id="gallery"></div>
-
-      <script>
-         jQuery(document).ready(function () {
-
-            jQuery("#gallery").nanogallery2( {
-                // ### gallery settings ### 
-
-
-                // THUMBNAILS
-                thumbnailWidth: "auto",
-                thumbnailHeight: 300,
-                thumbnailGutterWidth: 10, 
-                thumbnailGutterHeight: 10,
-                thumbnailBorderHorizontal: 0, 
-                thumbnailBorderVertical: 0,
-                thumbnailLabel: { display: false },
-
-
-                // LIGHTBOX
-                viewerToolbar: { display: false },
-                viewerTools: {
-                  topLeft:   'label',
-                  topRight:  'shareButton, zoomButton, fullscreenButton, closeButton'
-                },
-                
-                itemsBaseURL: '/img/photos/realestate/',
-                
-                // ### gallery content ### 
-                items: [
-
-                { src: '900px/20190721-realestate-philboivin-001.jpg', srct: '400px/20190721-realestate-philboivin-001.jpg', 
-                  title: 'Victoriaville' },
-
-                { src: '900px/20190814-realestate-philboivin-002.jpg', srct: '400px/20190814-realestate-philboivin-002.jpg', 
-                  title: 'Morin Heights' },
-
-                { src: '900px/20190830-realestate-philboivin-003.jpg', srct: '400px/20190830-realestate-philboivin-003.jpg', 
-                  title: 'Petite Italie - Montréal' },
-
-                { src: '900px/20200913-realestate-philboivin-004.jpg', srct: '400px/20200913-realestate-philboivin-004.jpg', 
-                  title: 'Cinéma Impérial' },
-
-                  ]
-              });
-          });
-      </script>
+      <div id="gallery">Chargement...</div>
 
    </div>
  </main>
@@ -99,6 +52,17 @@ Hello i'm Phil Boivin!
     $("#menu-l2").load("/inc/menu-l2.html");
     $("footer").load("/inc/footer.html");
   });
+</script>
+
+
+<!-- Load the gallery integration -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.5/jquery.nanogallery2.min.js"></script>
+<script src="js/pb.lib.js"></script>
+
+<script>
+  var csv = 'csv/phil-boivin-immobilier.csv';
+  var gallery = "#gallery";
+  displayGallery(csv, gallery);
 </script>
 
 </body>
