Minor updates : blog articles & index
- Update the og image of blog articles
- Integrated the external blog links to the blog index page
- New links on the index.html page

--- a/blogue.html
+++ b/blogue.html
@@ -38,7 +38,14 @@ Hello i'm Phil Boivin!
           Articles, projets et autres histoires.
           </p>
 
-          <span id="menu-blogue"></span>
+          <ul class="list top-spacer">
+            <li><a href="blogue/2021-03-22-mab.html">Mâle Alpha Barbier</a></li>
+            <li><a href="blogue/2020-12-05-surf-montreal.html">Surfer en hiver à Montréal</a></li>
+            <li><a href="cirque-du-soleil.html">Lumière sur... le Cirque du Soleil</a></li>
+            <li><a href="les-visages-du-taxi.html">Les visages du taxi</a></li>
+            <li><a href="flashback.html">Flashback</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
+          </ul>
 
         </div>
       </div>
@@ -52,7 +59,6 @@ Hello i'm Phil Boivin!
 <script> 
   $(function(){
     $("#menu-items").load("/inc/menu.html");
-    $("#menu-blogue").load("/inc/menu-blogue.html");
     $("footer").load("/inc/footer.html");
   });
 </script> 
