--- a/blogue/2020-12-05-surf-montreal.html
+++ b/blogue/2020-12-05-surf-montreal.html
@@ -8,7 +8,7 @@ Hello i'm Phil Boivin!
   <meta charset="utf-8">
   <title>Surfer en hiver à Montréal | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://www.philboivin.com/img/philboivin-og.jpg" />
+  <meta property="og:image" content="https://www.philboivin.com/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-001.jpg" />
   <link rel="icon" type="image/png" href="img/icon.png">
   <link href="/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
