--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@ Hello i'm Phil Boivin!
           <br>
           Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
           </p>
+          <hr>
+          <h2>Derniers projets</h2>
+          <ul class="list">
+            <li><a href="blogue/2021-03-22-mab.html">Mâle Alpha Barbier</a></li>
+            <li><a href="blogue/2020-12-05-surf-montreal.html">Surfer en hiver à Montréal</a></li>
+            <li><a href="les-visages-du-taxi.html">Les visages du taxi</a></li>
+          </ul>
 
         </div>
       </div>
