Minor updates to Blog articles

--- a/blogue/2020-12-05-surf-montreal.html
+++ b/blogue/2020-12-05-surf-montreal.html
@@ -39,32 +39,33 @@ Hello i'm Phil Boivin!
 
            Quelques photos capturées sur le fleuve Saint-Laurent près d’Habitat à Montréal.
            <br>Malgré la température près du point de congélation, j'ai rencontré quelques surfeuses et surfeurs passionnés par les vagues.
+           <br><span class="photo-by">Photos par Philippe Boivin.</span>
           </p>
 
           <div class="photos">
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-001.jpg">
-              Un surfeur se dirige vers le fleuve. Photo Philippe Boivin.
+              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-001.jpg" alt="Un surfeur se dirige vers le fleuve St-Laurent">
+              Un surfeur se dirige vers le fleuve St-Laurent.
             </p>
 
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-002.jpg">
-              Un surfeur pratique sur le fleuve St-Laurent. Photo Philippe Boivin.
+              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-002.jpg" alt="Un surfeur pratique sur le fleuve St-Laurent">
+              Un surfeur pratique sur le fleuve St-Laurent.
             </p>
 
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-003.jpg">
-             Photo Philippe Boivin.
+              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-003.jpg" alt="Surf sur le St-Laurent à Montréal">
+              Surf sur le St-Laurent à Montréal.
             </p>
 
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-004.jpg">
-              Photo Philippe Boivin.
+              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-004.jpg" alt="Surf sur le St-Laurent à Montréal">
+              Surf sur le St-Laurent à Montréal.
             </p>
 
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-005.jpg">
-              Un panneau "personalisé" sur le chemin vers la rivière. Photo Philippe Boivin.
+              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-005.jpg" alt="Un panneau personalisé sur le chemin vers le fleuve">
+              Un panneau "personalisé" sur le chemin vers le fleuve.
             </p>
 
           </div>
