--- a/blogue/2021-03-22-mab.html
+++ b/blogue/2021-03-22-mab.html
@@ -39,15 +39,13 @@ Hello i'm Phil Boivin!
           <p>
            <div class="date-blog">22 mars 2021</div>
            Quelques photos promotionnelles pour le <i>barber shop</i> Mâle Alpha Barbier situé dans l'est de Montréal à Pointe-aux-Trembles.
-           <br>Photos par Philippe Boivin.
+           <br><span class="photo-by">Photos par Philippe Boivin.</span>
           </p>
 
           <div class="photos">
             <p>
-              <img src="/img/photos/mab/900px/20210322-mab-philboivin-001.jpg">
+              <img src="/img/photos/mab/900px/20210322-mab-philboivin-001.jpg" alt="Barber Shop Mâle Alpha Barbier">
             </p>
-
-            
 
           </div>
 
