Link color update
- New portfolio link in menu (level 2)

--- a/inc/menu-l2.html
+++ b/inc/menu-l2.html
@@ -1,4 +1,5 @@
 <ul>
+	<li><a href="/portfolio.html">Portfolio</a></li>
 	<li><a href="/editorial.html">Editorial</a></li>
 	<li><a href="/reportages.html">Reportages</a></li>
 	<li><a href="/evenements.html">Événements</a></li>
