--- a/publicites.html
+++ b/publicites.html
@@ -13,7 +13,6 @@ Hello i'm Phil Boivin!
   <link href="/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.5/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.5/jquery.nanogallery2.min.js"></script>
 </head>
 
 
@@ -36,82 +35,12 @@ Hello i'm Phil Boivin!
         <div class="col">
           <div id="menu-l2" class="sub-menu"></div>
           <h1>Publicités</h1>
+          <p>Mises en scène, produits et autres images promotionnelles.</p>
         </div>
       </div>
 
-      <div id="gallery"></div>
+      <div id="gallery">Chargement...</div>
   
-      <script>
-         jQuery(document).ready(function () {
-
-            jQuery("#gallery").nanogallery2( {
-                // ### gallery settings ### 
-
-
-                // THUMBNAILS
-                thumbnailWidth: "auto",
-                thumbnailHeight: 300,
-                thumbnailGutterWidth: 10, 
-                thumbnailGutterHeight: 10,
-                thumbnailBorderHorizontal: 0, 
-                thumbnailBorderVertical: 0,
-                thumbnailLabel: { display: false },
-
-
-                // LIGHTBOX
-                viewerToolbar: { display: false },
-                viewerTools: {
-                  topLeft:   'label',
-                  topRight:  'shareButton, zoomButton, fullscreenButton, closeButton'
-                },
-                
-                itemsBaseURL: '/img/photos/ads/',
-                
-                // ### gallery content ### 
-                items: [
-
-                { src: '900px/20130713-ads-philboivin-001.jpg', srct: '400px/20130713-ads-philboivin-001.jpg', 
-                  title: 'Lavande' },
-
-                { src: '900px/20170507-ads-philboivin-002.jpg', srct: '400px/20170507-ads-philboivin-002.jpg', 
-                  title: 'Studio' },
-
-                { src: '900px/20171023-ads-philboivin-003.jpg', srct: '400px/20171023-ads-philboivin-003.jpg', 
-                  title: 'Cegep Gerald-Godin' },
-
-                { src: '900px/20171108-ads-philboivin-004.jpg', srct: '400px/20171108-ads-philboivin-004.jpg', 
-                  title: 'Cegep Gerald-Godin' },
-
-                { src: '900px/20181017-ads-philboivin-005.jpg', srct: '400px/20181017-ads-philboivin-005.jpg', 
-                  title: 'Cegep Gerald-Godin' },
-
-                { src: '900px/20181017-ads-philboivin-006.jpg', srct: '400px/20181017-ads-philboivin-006.jpg', 
-                  title: 'Cegep Gerald-Godin' },
-
-                { src: '900px/20181126-ads-philboivin-007.jpg', srct: '400px/20181126-ads-philboivin-007.jpg', 
-                  title: 'Cegep Gerald-Godin' },
-
-                { src: '900px/20190215-ads-philboivin-008.jpg', srct: '400px/20190215-ads-philboivin-008.jpg', 
-                  title: 'Cirque du Soleil' },
-
-                { src: '900px/20190527-ads-philboivin-009.jpg', srct: '400px/20190527-ads-philboivin-009.jpg', 
-                  title: 'Lacoste' },
-
-                { src: '900px/20190527-ads-philboivin-010.jpg', srct: '400px/20190527-ads-philboivin-010.jpg', 
-                  title: 'Studio' },
-
-                { src: '900px/20190827-ads-philboivin-011.jpg', srct: '400px/20190827-ads-philboivin-011.jpg', 
-                  title: 'Rencontre corporative' },
-
-                { src: '900px/20190827-ads-philboivin-012.jpg', srct: '400px/20190827-ads-philboivin-012.jpg', 
-                  title: 'Fin de journée' },
-
-                  ]
-              });
-          });
-
-      </script>
-
    </div>
  </main>
 
@@ -125,6 +54,18 @@ Hello i'm Phil Boivin!
     $("footer").load("/inc/footer.html");
   });
 </script> 
+
+
+<!-- Load the gallery integration -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.5/jquery.nanogallery2.min.js"></script>
+<script src="js/pb.lib.js"></script>
+
+<script>
+  var csv = 'csv/Phil-Boivin-Publicites.csv';
+  var gallery = "#gallery";
+  displayGallery(csv, gallery);
+</script>
+
 
 </body>
 </html>
