--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
-          <li>Découvrez le projet <a href="https://fr.giantplastictap.com/">Giant Plastic Tap</a> de Benjamin Von Wong!</li>
+          <li><a href="editorial.html">Portfolio éditorial</a> à jour</li>
           <li><a href="blogue/2021-03-22-mab.html">Shooting photo chez le barbier</a></li>
           <li><a href="blogue/2020-12-05-surf-montreal.html">Surfer en hiver?</a></li>
 
