--- a/apropos.html
+++ b/apropos.html
@@ -44,6 +44,10 @@ Hello i'm Phil Boivin!
         Philippe est titulaire d’un diplôme en photographie de l’Université Concordia de Montréal et possède une certification avancée comme pilote de drone au Canada.
         </p>
 
+        <p>
+        Je vous invite à <a href="./cv.pdf">consulter mon CV</a>.
+        </p>
+
       </div>
 
     </div>
