--- a/apropos.html
+++ b/apropos.html
@@ -45,7 +45,7 @@ Hello i'm Phil Boivin!
         </p>
 
         <p>
-        Je vous invite à <a href="./cv.pdf">consulter mon CV</a>.
+        Je vous invite à <a href="/cv">consulter mon CV</a>.
         </p>
 
       </div>
