--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Hello i'm Phil Boivin!
 
           <h1>Bonjour!</h1> 
           <p>
-          Je suis Philippe. Un photographe et vidéaste montréalais au service des humains (et de certains robots).
+          Je suis Philippe. Un photographe, vidéaste et pilote de drone montréalais au service des humains (et de certains robots).
           <br>
           Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
           </p>
