--- a/blogue.html
+++ b/blogue.html
@@ -39,6 +39,7 @@ Hello i'm Phil Boivin!
           </p>
 
           <ul class="list top-spacer">
+            <li><a href="blogue/2021-07-01-cerises.html">Cerises du Plateau</a></li>
             <li><a href="blogue/2021-03-22-mab.html">Mâle Alpha Barbier</a></li>
             <li><a href="blogue/2020-12-05-surf-montreal.html">Surfer en hiver à Montréal</a></li>
             <li><a href="cirque-du-soleil.html">Lumière sur... le Cirque du Soleil</a></li>
