--- a/blogue/2020-12-05-surf-montreal.html
+++ b/blogue/2020-12-05-surf-montreal.html
@@ -8,7 +8,7 @@ Hello i'm Phil Boivin!
   <meta charset="utf-8">
   <title>Surfer en hiver à Montréal | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://www.philboivin.com/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-001.jpg" />
+  <meta property="og:image" content="https://www.philboivin.com/img/photos/blog/surf-mtl/20201205-surf-montreal-phil-boivin-001.jpg" />
   <link rel="icon" type="image/png" href="img/icon.png">
   <link href="/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -44,30 +44,36 @@ Hello i'm Phil Boivin!
 
           <div class="photos">
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-001.jpg" alt="Un surfeur se dirige vers le fleuve St-Laurent">
+              <img src="/img/photos/blog/surf-mtl/20201205-surf-montreal-phil-boivin-001.jpg" alt="Un surfeur se dirige vers le fleuve St-Laurent">
               Un surfeur se dirige vers le fleuve St-Laurent.
             </p>
 
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-002.jpg" alt="Un surfeur pratique sur le fleuve St-Laurent">
+              <img src="/img/photos/blog/surf-mtl/20201205-surf-montreal-phil-boivin-002.jpg" alt="Un surfeur pratique sur le fleuve St-Laurent">
               Un surfeur pratique sur le fleuve St-Laurent.
             </p>
 
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-003.jpg" alt="Surf sur le St-Laurent à Montréal">
+              <img src="/img/photos/blog/surf-mtl/20201205-surf-montreal-phil-boivin-003.jpg" alt="Surf sur le St-Laurent à Montréal">
               Surf sur le St-Laurent à Montréal.
             </p>
 
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-004.jpg" alt="Surf sur le St-Laurent à Montréal">
+              <img src="/img/photos/blog/surf-mtl/20201205-surf-montreal-phil-boivin-004.jpg" alt="Surf sur le St-Laurent à Montréal">
               Surf sur le St-Laurent à Montréal.
             </p>
 
             <p>
-              <img src="/img/photos/blog/900px/20201205-surf-montreal-phil-boivin-005.jpg" alt="Un panneau personalisé sur le chemin vers le fleuve">
+              <img src="/img/photos/blog/surf-mtl/20201205-surf-montreal-phil-boivin-005.jpg" alt="Un panneau personalisé sur le chemin vers le fleuve">
               Un panneau "personalisé" sur le chemin vers le fleuve.
             </p>
 
+          </div>
+
+          <div class="row">
+            <div class="col">
+              <span id="menu-editorial"></span>
+            </div>
           </div>
 
         </div>
@@ -82,6 +88,7 @@ Hello i'm Phil Boivin!
   $(function(){
     $("#menu-items").load("/inc/menu.html");
     $("footer").load("/inc/footer.html");
+    $("#menu-editorial").load("/inc/menu-editorial.html");
   });
 </script> 
 
