--- a/inc/menu-editorial.html
+++ b/inc/menu-editorial.html
@@ -1,4 +1,4 @@
 <hr>
 
-<p>
-Autres projets éditoriaux : <span class="sub-sub-menu">[ <a href="/les-visages-du-taxi.html">Taxi</a> | <a href="/cirque-du-soleil.html">Cirque du Soleil</a> | <a href="/flashback.html">Flashback</a> | <a href="/mobile.html">Mobile</a> ]</span></p>
+<p class="center">
+Articles, projets et autres histoires : <span class="sub-sub-menu">[ <a href="/blogue/2021-07-01-cerises.html">Cerises du Plateau</a> | <a href="/blogue/2021-03-22-mab.html">Chez le barbier</a> | <a href="/blogue/2020-12-05-surf-montreal.html">Surfer en hiver</a> | <a href="/les-visages-du-taxi.html">Taxi</a> | <a href="/cirque-du-soleil.html">Cirque du Soleil</a> | <a href="/flashback.html">Flashback</a> | <a href="/mobile.html">Mobile</a> ]</span></p>
