--- a/blogue/2021-03-22-mab.html
+++ b/blogue/2021-03-22-mab.html
@@ -53,6 +53,12 @@ Hello i'm Phil Boivin!
       </div>
 
       <div id="gallery"></div>
+
+      <div class="row">
+        <div class="col">
+          <span id="menu-editorial"></span>
+        </div>
+      </div>
   
       <script>
          jQuery(document).ready(function () {
@@ -113,6 +119,7 @@ Hello i'm Phil Boivin!
   $(function(){
     $("#menu-items").load("/inc/menu.html");
     $("footer").load("/inc/footer.html");
+    $("#menu-editorial").load("/inc/menu-editorial.html");
   });
 </script> 
 
