--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@ Hello i'm Phil Boivin!
       <div id="gallery">Chargement...</div>
 
 
-     <div class="row top-spacer">
+     <div class="row">
       <div class="col">
 
         <h2>Quelques publications</h2>
